// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<transition-stub
  name="mi-fade"
  appear="true"
  persisted="false"
  css="true"
  role="button"
  tabindex="0"
>
  <div class="mi-overlay">
  </div>
</transition-stub>
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center"
  >
    <i
      class="mi-badge__wrapper my-icon my-icon-cross mi-popup__close-icon mi-popup__close-icon--top-right mi-haptics-feedback"
      role="button"
      tabindex="0"
    >
    </i>
  </div>
</transition-stub>
`;

exports[`should render correct close icon when using close-icon prop 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-success mi-popup__close-icon mi-popup__close-icon--top-right mi-haptics-feedback" role="button" tabindex="0">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should render overlay-content slot correctly 1`] = `
<transition-stub
  name="mi-fade"
  appear="true"
  persisted="false"
  css="true"
  role="button"
  tabindex="0"
>
  <div class="mi-overlay">
    Custom Overlay Content
  </div>
</transition-stub>
<transition-stub
  name="mi-fade"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popup--center"
  >
  </div>
</transition-stub>
`;
